[gd_scene load_steps=9 format=3 uid="uid://bp1dpd4x81m8j"]

[ext_resource type="Texture2D" uid="uid://bagqswhtc8fjg" path="res://Game images and assets/City assets/Main_city_tileset/b_Generate_a_image_of_ (4).jpg" id="1_60nny"]
[ext_resource type="Script" uid="uid://b86bc3pflerie" path="res://scene_shop.gd" id="1_jwl78"]
[ext_resource type="Texture2D" uid="uid://dxex0nq81ke52" path="res://Game images and assets/City assets/Main_city_tileset/bg1.webp" id="2_dm3g7"]
[ext_resource type="FontFile" uid="uid://bah4drin3efnf" path="res://Game images and assets/font/upheavtt.ttf" id="3_jwl78"]
[ext_resource type="Texture2D" uid="uid://chngenyatcmo2" path="res://Game images and assets/City assets/Main_city_tileset/a_Generate_a_image_of___7_-removebg-preview (1).png" id="4_8p7qu"]
[ext_resource type="FontFile" uid="uid://c4blhgji8rcl3" path="res://Game images and assets/font/alagard.ttf" id="5_g76si"]
[ext_resource type="Texture2D" uid="uid://bnr2e0awm2c1p" path="res://Game images and assets/City assets/Main_city_tileset/b_Rename_the_1litre_as-removebg-preview.png" id="6_4y4jf"]
[ext_resource type="Texture2D" uid="uid://c0gytfsnmdtct" path="res://Game images and assets/City assets/Main_city_tileset/a_Generate_a_image_of___8_-removebg-preview.png" id="7_dm3g7"]

[node name="Water_shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jwl78")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_60nny")
expand_mode = 1

[node name="Main button contianer" type="TextureRect" parent="TextureRect"]
modulate = Color(0, 0, 0, 0.43137255)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -440.84375
offset_top = -238.875
offset_right = 440.84375
offset_bottom = 238.875
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_dm3g7")
expand_mode = 1

[node name="Esc WS" type="Button" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 133.0
offset_bottom = 53.0
theme_override_fonts/font = ExtResource("3_jwl78")
theme_override_font_sizes/font_size = 30
text = "Esc"

[node name="Water bottle 1litre" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -171.5
offset_top = -147.0
offset_right = 171.5
offset_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_8p7qu")
expand_mode = 1

[node name="Button" type="Button" parent="Water bottle 1litre"]
layout_mode = 0
offset_left = 77.5
offset_top = 283.0
offset_right = 261.5
offset_bottom = 349.0
theme_override_fonts/font = ExtResource("5_g76si")
theme_override_font_sizes/font_size = 40
text = "₹20"

[node name="Water bottle 1litre2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -473.0
offset_top = -141.0
offset_right = -137.0
offset_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_4y4jf")
expand_mode = 1

[node name="Button" type="Button" parent="Water bottle 1litre2"]
layout_mode = 0
offset_left = 75.0
offset_top = 273.0
offset_right = 259.0
offset_bottom = 339.0
theme_override_fonts/font = ExtResource("5_g76si")
theme_override_font_sizes/font_size = 40
text = "₹15"

[node name="Water bottle 1litre3" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 111.0
offset_top = -185.0
offset_right = 489.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_dm3g7")
expand_mode = 1

[node name="Button" type="Button" parent="Water bottle 1litre3"]
layout_mode = 0
offset_left = 101.0
offset_top = 318.0
offset_right = 285.0
offset_bottom = 384.0
theme_override_fonts/font = ExtResource("5_g76si")
theme_override_font_sizes/font_size = 40
text = "₹40"

[connection signal="pressed" from="Esc WS" to="." method="_on_esc_ws_pressed"]
